2021-03-24  Allen D. Ball  <ball@hcf.dev>

	* Added mechanism for known dependencies.  Support current Spark
	releases.

	* src/main/java/ganymede/dependency/Analyzer.java:
	Added parse(InputStream) method.

2021-03-21  Allen D. Ball  <ball@hcf.dev>

	* src/generate-dependencies-resources.bash: Initial writing.

2021-03-20  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/dependency/Resolver.java:
	In addToClasspath(File...), test for logging artifacts before
	adding to the classpath.

2021-03-16  Allen D. Ball  <ball@hcf.dev>

	* Added groovy and kotlin magics.

2021-03-15  Allen D. Ball  <ball@hcf.dev>

	* Added scala magic (but need to address
	https://github.com/scala/bug/issues/11754).

	* src/main/java/ganymede/kernel/JupyterRestClient.java:
	Initial writing.

2021-03-14  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/server/renderer/SparkSessionRenderer.java:
	Initial writing.

	* src/main/java/ganymede/kernel/Kernel.java,
	src/main/java/ganymede/server/Server.java:
	Define and implement getKernelInfo() method.

2021-03-12  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/server/Message.java:
	Add topic to Pub message envelopes (trivially msg_type).

2021-03-10  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/server/renderer/AbstractThymeleafHTMLRenderer.java:
	Initial writing; refactored SparkDatasetRenderer and
	TablesawPlotlyFigureRenderer.

	* src/main/java/ganymede/server/renderer/SparkDatasetRenderer.java:
	Initial writing.

2021-03-07  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/shell/magic/HTML.java: Initial writing.

	* src/main/java/ganymede/dependency/Resolver.java:
	Quietly enforce only one SLF4J binding is added to the classpath.

	* Modified Analyzer.getShadedArtifactSet(File) to search for
	META-INF/shaded-artifacts before applying heuristics.  Generate
	META-INF/shaded-artifacts for ganymede-kernel.jar.

2021-03-05  Allen D. Ball  <ball@hcf.dev>
