@@ -1,3 +1,7 @@
+2021-03-25  Allen D. Ball  <ball@hcf.dev>
+
+	* Added GET /kernel/classpath REST method.
+
 2021-03-24  Allen D. Ball  <ball@hcf.dev>
 
 	* Added mechanism for known dependencies.  Support current Spark
